2002-01-29  Alex Larsson  <alexl@redhat.com>

	* gui/greeter/Makefile.am:
	Add WARN_CFLAGS to INCLUDES.
	mumble mumble...

	* gui/greeter/greeter.c:
	Call greeter_layout() from main().

	* gui/greeter/greeter_canvas_item.c:
	Change anchor handling. Now it's done manually by
	greeter_geometry.c for everything but labels.

	* gui/greeter/greeter_geometry.[ch]:
	Boxes now work.

	* gui/greeter/greeter_parser.c:
	* gui/greeter/greeter_item.h:
	Add expand property to items
	Build root item.

2002-01-29  Alexander Larsson  <alla@lysator.liu.se>

	* gui/greeter/Makefile.am:
	Added new files.

	* gui/greeter/greeter.c:
	Update to get the root GreeterItemInfo.

	* gui/greeter/greeter_item.[ch]:
	Make items keep track of their parent.
	Add orig_pixbufs[].
	Add box_min_widht/height and size allocation stuff

	* gui/greeter/greeter_parser.[ch]:
	Rename homogenous to homogeneous.
	Parse box min-width/height
	Load pixmaps to orig_pixbufs[]
	Keep track of items parents
	Create root item info

	* gui/greeter/greeter_canvas_item.[ch]:
	* gui/greeter/greeter_geometry.[ch]:
	New files. Not used yet.
	
Mon Jan 21 19:14:28 2002  George Lebl <jirka@5z.com>

	* acconfig.h, configure.in: use GETTEXT_PACKAGE

	* daemon/gdm.c, daemon/misc.[ch], daemon/verify-pam.c,
	  daemon/server.c, daemon/slave.c, daemon/display.c:
	  When displaying something on a console display it only
	  when the console is UTF-8, which is only true if
	  "gdmopen vt-is-UTF8 -q" returns 0 status.  Else don't
	  actually translate anything and just print out the english/ASCII
	  version.

	* daemon/verify-pam.c:  Better check for existance of the pam
	  gdm configuration

	* daemon/gdm.c, gui/gdmXnestchooser.c, gui/gdmchooser.c,
	  gui/gdmconfig.c, gui/gdmflexiserver.c, gui/gdmlogin.c,
	  gui/gdmphotosetup.c:  property bind gettext stuff and make	
	  sure we correctly set it up for UTF-8

2002-01-20  Alexander Larsson  <alla@lysator.liu.se>

	* gui/greeter/greeter_item.[ch]: