@@ -1,5 +1,14 @@
 2002-01-29  Alex Larsson  <alexl@redhat.com>
 
+	* gui/greeter/greeter_canvas_item.c:
+	Remove old anchor leftovers.
+	Set font_desc instead of font for text items.
+	
+	* gui/greeter/greeter_geometry.c:
+	Set font_desc instead of font for text items.
+
+2002-01-29  Alex Larsson  <alexl@redhat.com>
+
 	* gui/greeter/Makefile.am:
 	Add WARN_CFLAGS to INCLUDES.
 	mumble mumble...
